[package]
name = "cargo-dotenv"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A tiny cargo subcommand to run cargo commands with dotenv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
env = {version = "0.3.2", package = "env2"}